# SiNCRO

./: CMakeLists.txt  CMakePresets.json
include/: CMFD.h  Constants.h  FENM.h  Node.hpp
src/: CMFD.cpp  FENM.cpp  main.cpp
